"belajarm CSS grid"

--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <header>
-        <h1>Hello WPU</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi, culpa? Alias quasi possimus ab praesentium nihil officia illo quos sunt.</p>
-    </header>    
+  <div class="container">
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
+    <div class="item">6</div>
+    <div class="item">7</div>
+    <div class="item">8</div>
+    <div class="item">9</div>
+  </div>
 </body>
 </html>
