"belajar scss perkondisian @if else"

--- a/flow-control/index.html
+++ b/flow-control/index.html
@@ -9,5 +9,6 @@
 <body>
     <img src="../img/5.jpg" class="circle-profile" alt="Coffe">
     <img src="../img/5.jpg" class="square-profile" alt="Coffe">
+    <div class="triangle"></div>
 </body>
 </html>
