"belajar @while, function lighten() dan darken() di SCSS mengelapkan dan menerangkan"

--- a/flow-control/index.html
+++ b/flow-control/index.html
@@ -10,5 +10,27 @@
     <img src="../img/5.jpg" class="circle-profile" alt="Coffe">
     <img src="../img/5.jpg" class="square-profile" alt="Coffe">
     <div class="triangle"></div>
+
+    <ul class="gradient">
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+        <li>Item 6</li>
+        <li>Item 7</li>
+        <li>Item 8</li>
+        <li>Item 9</li>
+        <li>Item 10</li>
+    </ul>
+
+    <ul class="socials">
+        <li class="youtube">https://www.youtube.com/watch?v=CkH4DF9kfuc&t=883s</li>
+        <li class="gemini">https://gemini.google.com/app/73de57adaf03002b?hl=id</li>
+        <li class="github">https://github.com/becakdarurat/becakdarurat.github.io</li>
+        <li class="dicoding">https://www.dicoding.com/academies/123/tutorials/4162?from=4159</li>
+        <li class="projectIDX">https://idx.google.com/u/0/website-responsive-9610020</li>
+    </ul>
+
 </body>
 </html>
